[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SteamCommunityKit"
version = "0.1.0"
description = "A professional Python client for Steam Web API and Steam Community flows."
requires-python = ">=3.8"
license = {text = "Proprietary"}
authors = [
  {name = "jayden"},
]
dependencies = [
  "PyJWT>=2.8.0",
  "requests>=2.32.0",
  "rsa>=4.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
