[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SteamCommunityKit"
version = "0.1.0"
description = "A professional Python client for Steam Web API and Steam Community flows."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "jayden"},
]
keywords = ["steam", "steamcommunity", "steam-api", "steam-web-api", "steam-market", "steam-workshop"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "PyJWT>=2.8.0",
  "requests>=2.32.0",
  "rsa>=4.9",
]

[project.urls]
Homepage = "https://github.com/ja7den2006/SteamCommunityKit"
Repository = "https://github.com/ja7den2006/SteamCommunityKit"
Issues = "https://github.com/ja7den2006/SteamCommunityKit/issues"
Documentation = "https://github.com/ja7den2006/SteamCommunityKit/tree/main/docs"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "build>=1.2.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
